build/k8s/notification-service/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notification-service
  namespace: app
  labels:
    app: notification-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: notification-service
  template:
    metadata:
      labels:
        app: notification-service
    spec:
      containers:
        - name: notification-service
          imagePullPolicy: Always
          image: soundsofanarchy/otus-microservices-architect:v2.1.0-notification-service-arm
          ports:
            - containerPort: 9000
