build/k8s/notification-service/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: notification-service
  namespace: app
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /sign-up
spec:
  ingressClassName: nginx
  rules:
    - host: "arch.homework"
      http:
        paths:
          - path: /notifications/(\w*)/(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: notification-service
                port:
                  number: 9090
